--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -11,7 +11,7 @@ $font-secondary: 'Koulen', sans-serif;
 
 // -- HERO --
 #hero {
-    padding: 136px 12px 48px 12px;
+    padding: 136px 12px 60px 12px;
     background-image: url("../immagini/bg_hero_mobile.png");
     background-repeat: no-repeat;
     background-position: bottom right;
@@ -69,7 +69,7 @@ $font-secondary: 'Koulen', sans-serif;
 
 @media (min-width: 1280px) {
         #hero {
-        padding: 156px 64px 104px 64px;
+        padding: 156px 64px 96px 64px;
         background-image: url("../immagini/bg_hero_desktop.png");
         background-repeat: no-repeat;
         background-position: bottom right;
